...
  [MenuItemEnum.AddressBook]: 'menu.addressbook',
  [MenuItemEnum.WalletSeedUfvk]: 'menu.walletseedufvk',
  [MenuItemEnum.Rescan]: 'menu.rescan',
  [MenuItemEnum.SyncReport]: 'menu.syncreport',
  [MenuItemEnum.FundPools]: 'menu.fundpools',
  [MenuItemEnum.Insight]: 'menu.insight',
  [MenuItemEnum.ChangeWallet]: 'menu.changewallet',
  [MenuItemEnum.Server]: 'menu.server',
};

type LoadedAppOptionsPanelHostProps = {
  onMenuItemSelected: (item: MenuItemEnum) => void;
  zingolibVersion: string;
...
