...
                      borderRadius: 10,
                      minWidth: 25,
                      minHeight: 25,
                    }}
                  >
                    <View
                      testID="header.checkicon"
                      style={{
                        flexDirection: 'row',
                        justifyContent: 'center',
                        alignItems: 'center',
                        padding: 3,
                      }}
...
                        justifyContent: 'center',
                        alignItems: 'center',
                        padding: 3,
                      }}
                    >
                      <TouchableOpacity
                        testID="header.playicon"
                        onPress={() => {
                          navigation.navigate(RouteEnum.SyncReport);
                        }}
                      >
                        <View
                          style={{
...
