...
          renderFooter={renderConfirmFooter}
        >
          <BottomSheetScrollView
            showsVerticalScrollIndicator={true}
            persistentScrollbar={true}
            indicatorStyle={'white'}
            testID="send.confirm.scroll-view"
            bounces={false}
            alwaysBounceVertical={false}
            style={{
              flex: 1,
            }}
            contentContainerStyle={{
...
                      />
                    )}
                  </View>
                  {!!memoTotal && (
                    <>
                      <FadeText style={{ marginTop: 10 }}>
                        {translate('send.confirm-memo') as string}
                      </FadeText>
                      <RegText testID="send.confirm-memo" selectable={true}>
                        {memoTotal}
                      </RegText>
                    </>
                  )}
...
